[package]
name = "bootstub-updater"
version = "1.0.0"
authors = ["RAR27 <rehanalirana@tuta.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Automatically updates efibootstub when kernel is updated"
repository = "https://github.com/RAR27/bootstub-updater"
readme = "README.md"
keywords = ["efi", "kernel", "bootstub"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
clap = "3.0.0-beta.1"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5"
